--- a/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
+++ b/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
@@ -267,14 +267,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Table Title'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'TABLE'.title()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          winner_ht    winner_age   winner_rank  winner_rank_points\n",
+      "count  46403.000000  47248.000000  46642.000000        46642.000000\n",
+      "mean     175.621188     27.313285     57.918485         1473.355066\n",
+      "std       42.048744      7.807148     71.089303         1922.592447\n",
+      "min        1.000000      4.000000      1.000000            1.000000\n",
+      "25%      180.000000     23.594798     18.000000          525.000000\n",
+      "50%      185.000000     26.182067     41.000000          880.000000\n",
+      "75%      190.000000     28.933607     75.000000         1575.000000\n",
+      "max      208.000000    147.000000   1890.000000        15785.000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>winner_ht</th>\n",
+       "      <th>winner_age</th>\n",
+       "      <th>winner_rank</th>\n",
+       "      <th>winner_rank_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>46403.000000</td>\n",
+       "      <td>47248.000000</td>\n",
+       "      <td>46642.000000</td>\n",
+       "      <td>46642.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>175.621188</td>\n",
+       "      <td>27.313285</td>\n",
+       "      <td>57.918485</td>\n",
+       "      <td>1473.355066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>42.048744</td>\n",
+       "      <td>7.807148</td>\n",
+       "      <td>71.089303</td>\n",
+       "      <td>1922.592447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>23.594798</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>525.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>185.000000</td>\n",
+       "      <td>26.182067</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>880.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>28.933607</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>1575.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>208.000000</td>\n",
+       "      <td>147.000000</td>\n",
+       "      <td>1890.000000</td>\n",
+       "      <td>15785.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          winner_ht    winner_age   winner_rank  winner_rank_points\n",
+       "count  46403.000000  47248.000000  46642.000000        46642.000000\n",
+       "mean     175.621188     27.313285     57.918485         1473.355066\n",
+       "std       42.048744      7.807148     71.089303         1922.592447\n",
+       "min        1.000000      4.000000      1.000000            1.000000\n",
+       "25%      180.000000     23.594798     18.000000          525.000000\n",
+       "50%      185.000000     26.182067     41.000000          880.000000\n",
+       "75%      190.000000     28.933607     75.000000         1575.000000\n",
+       "max      208.000000    147.000000   1890.000000        15785.000000"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Table that that round to two decimals\n",
+    "DataDescribe=Tennis_mod.describe()\n",
+    "DataDescribe.round(2)\n",
+    "print(DataDescribe)\n",
+    "DataDescribe.rename(columns={ df.columns[0]: \"your value\" })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Table Title'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'table title'.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -377,43 +543,14 @@
        "max       208.00      147.00      1890.00            15785.00"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Table that that round to two decimals\n",
-    "DataDescribe=Tennis_mod.describe()\n",
     "DataDescribe.round(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Table Title'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'table title'.title()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
