--- a/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
+++ b/dataproject/CO/Aflevering 1_Notebook_CO.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "max      208.000000    147.000000   1890.000000        15785.000000"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,12 +415,12 @@
     "DataDescribe=Tennis_mod.describe()\n",
     "DataDescribe.round(2)\n",
     "print(DataDescribe)\n",
-    "DataDescribe.rename(columns={ df.columns[0]: \"your value\" })"
+    "DataDescribe.rename(columns={ df.columns[1]: \"whatever\" })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "'Table Title'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
