--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -479,6 +479,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **augmented Solow model with human capital** is given by the parameters:\n",
+    "\n",
+    "1. $K_t$ is capital per worker\n",
+    "* $L_t$ is labor (with a growth rate on $n$)\n",
+    "* $A_t$ is technology (growing with a rate of $g$)\n",
+    "* $Y_t = K_t^\\alpha H_t^\\varphi(A_tL_t)^{(1-\\alpha)}$ is GDP\n",
+    "\n",
+    "We still have the normal framework for a solow model such that **Savings** is a constant fraction of GDP and the production function have a constant return to scale\n",
+    "\n",
+    "Dividing the production function by $L_t$ on both sides gives the production function per worker:\n",
+    "\n",
+    "5. $y_t = k_t^\\alpha h_t^\\varphi A_t^{(1-\\alpha)}$\n",
+    "\n",
+    "By taking logs on both sides we get:\n",
+    "6. $ln(y_t) = \\alpha ln(k_t) +\\varphi ln(h_t)+ \\beta ln(A_t)$\n",
+    "\n",
+    "we know use the standard approximation that logs differences is a growth rate approximation. Therefore, calculate the time differences on both sides which gives:\n",
+    "\n",
+    "7. $ln(y_t)-ln(y_{t-1}) = \\alpha (ln(k_t)-ln(k_{t-1})) +\\varphi (ln(h_t)-ln(h_{t-1}))+ \\beta (ln(A_t)-ln(A_{t-1}))$\n",
+    "\n",
+    "We use the approximation that the gowth rate for output per worker is $g_y$, the growth rate for technology is g, the growth rate for human capital per worker is $g_h$ and the growth rate in capital per worker is $g_k$. This gives us the following equation:\n",
+    "\n",
+    "8. $g_y = \\alpha g_k +\\varphi g_h+ \\beta g$\n",
+    "\n",
+    "We know from the solow model that the two capital/output ratios is constant in steady state, which is why we use the approximation that both capital and human capital grow at the same rate as $y_t$: $g_y = g_k =g_h$. This gives us the following model\n",
+    "\n",
+    "9. $g_y = \\beta/{(1-\\alpha-\\varphi)} g$\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
