--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,11 @@
     "\n",
     "from scipy.stats import trim_mean, kurtosis\n",
     "from scipy.stats.mstats import mode, gmean, hmean\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +175,7 @@
        "19   9.338  0.86572  0.00450328     A               1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +317,7 @@
        "      <td>0.037568</td>\n",
        "      <td>0.004339</td>\n",
        "      <td>0.038041</td>\n",
-       "      <td>0.0052366</td>\n",
+       "      <td>0.005237</td>\n",
        "      <td>0.016599</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
@@ -322,11 +326,8 @@
        "</div>"
       ],
       "text/plain": [
-       "14   Country       y03       y60        gy        sK         sH         n  \\\n",
-       "110  Burundi  0.021141  0.037568  0.004339  0.038041  0.0052366  0.016599   \n",
-       "\n",
-       "14  Grade  \n",
-       "110     C  "
+       "14   Country       y03       y60        gy        sK        sH         n Grade\n",
+       "110  Burundi  0.021141  0.037568  0.004339  0.038041  0.005237  0.016599     C"
       ]
      },
      "metadata": {},
@@ -345,7 +346,7 @@
     "DataDescribe[\"gy\"] = DataDescribe.gy.astype(float)\n",
     "DataDescribe[\"sK\"] = DataDescribe.sK.astype(float)\n",
     "DataDescribe[\"n\"] = DataDescribe.n.astype(float)\n",
-    "\n",
+    "DataDescribe[\"sH\"] = DataDescribe.sH.astype(float)\n",
     "#print(DataDescribe.round(decimals=2))\n",
     "\n",
     "print(\"\")\n",
@@ -478,53 +479,140 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* **Step 3: modelling our equation for growth in GDP:**"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **augmented Solow model with human capital** is given by the parameters:\n",
+    "We now set up our **augmented Solow model with human capital and natural resources**, which is given by the parameters:\n",
     "\n",
     "1. $K_t$ is capital per worker\n",
     "* $L_t$ is labor (with a growth rate on $n$)\n",
     "* $A_t$ is technology (growing with a rate of $g$)\n",
-    "* $Y_t = K_t^\\alpha H_t^\\varphi(A_tL_t)^{(1-\\alpha)}$ is GDP\n",
+    "* $X_t$ is the total amount of land and it does not carry a time subscript since land is in fixed supply\n",
+    "* $R_t$ is the total remaining stock of an exhaustible resource, oil at time t\n",
+    "* $E_t$ is the part of $R_t$ that is used as energy input during periode t (where the exhaustible rate is $s_E$)\n",
+    "* $Y_t = K_t^\\alpha H_t^\\varphi(A_tL_t)^\\beta X^\\kappa E_t^\\epsilon$ is GDP\n",
     "\n",
-    "We still have the normal framework for a solow model such that **Savings** is a constant fraction of GDP and the production function have a constant return to scale\n",
+    "We still have the normal framework for a solow model such that **Savings** is a constant fraction of GDP and the production function have a constant return to scale. Moreover, we are going to use the following equations to model our framwork\n",
     "\n",
-    "Dividing the production function by $L_t$ on both sides gives the production function per worker:\n",
+    "8. $R_{t+1} = R_t - E_t$\n",
+    "9. $ E_t = s_E R_t$, where $0<s_E<1$\n",
     "\n",
-    "5. $y_t = k_t^\\alpha h_t^\\varphi A_t^{(1-\\alpha)}$\n",
+    "Dividing the production function by $L_t$ on both sides and using equation 9, gives the production function per worker:\n",
+    "\n",
+    "10. $y_t = k_t^\\alpha h_t^\\varphi A_t^\\beta (X/L_t)^\\kappa ({s_E R_t}/L_t)^\\epsilon $\n",
     "\n",
     "By taking logs on both sides we get:\n",
-    "6. $ln(y_t) = \\alpha ln(k_t) +\\varphi ln(h_t)+ \\beta ln(A_t)$\n",
+    "11. $ln(y_t) = \\alpha ln(k_t) +\\varphi ln(h_t)+ \\beta ln(A_t)- \\kappa (ln(L_t)-ln(L_{t-1}))+ \\epsilon (((ln(R_t)-ln(R_{t-1}))-(ln(L_t)-ln(L_{t-1}))) = \\alpha ln(k_t) +\\varphi ln(h_t)+ \\beta ln(A_t)- (\\kappa+\\epsilon) (ln(L_t)-ln(L_{t-1}))+ \\epsilon (ln(R_t)-ln(R_{t-1})) $\n",
+    "\n",
+    "By combinig equation 8 and 9, we get that $ R_{t+1} = R_t - s_E R_t <=> (R_{t+1}/R_t) = s_E + 1 $, and use that $ln(R_t)-ln(R_{t-1})=-ln(s_E+1) =-s_E$, we get that\n",
+    "\n",
+    "13. $ln(y_t) = \\alpha ln(k_t) +\\varphi ln(h_t)+ \\beta ln(A_t)- (\\kappa+\\epsilon) n- \\epsilon s_E $\n",
     "\n",
     "we know use the standard approximation that logs differences is a growth rate approximation. Therefore, calculate the time differences on both sides which gives:\n",
     "\n",
-    "7. $ln(y_t)-ln(y_{t-1}) = \\alpha (ln(k_t)-ln(k_{t-1})) +\\varphi (ln(h_t)-ln(h_{t-1}))+ \\beta (ln(A_t)-ln(A_{t-1}))$\n",
+    "14. $ln(y_t)-ln(y_{t-1}) = \\alpha (ln(k_t)-ln(k_{t-1})) +\\varphi (ln(h_t)-ln(h_{t-1}))+ \\beta (ln(A_t)-ln(A_{t-1}))- (\\kappa+\\epsilon) n- \\epsilon s_E$\n",
     "\n",
     "We use the approximation that the gowth rate for output per worker is $g_y$, the growth rate for technology is g, the growth rate for human capital per worker is $g_h$ and the growth rate in capital per worker is $g_k$. This gives us the following equation:\n",
     "\n",
-    "8. $g_y = \\alpha g_k +\\varphi g_h+ \\beta g$\n",
+    "15. $g_y = \\alpha g_k +\\varphi g_h+ \\beta g- (\\kappa+\\epsilon) n- \\epsilon s_E$\n",
+    " \n",
     "\n",
     "We know from the solow model that the two capital/output ratios is constant in steady state, which is why we use the approximation that both capital and human capital grow at the same rate as $y_t$: $g_y = g_k =g_h$. This gives us the following model\n",
     "\n",
-    "9. $g_y = \\beta/{(1-\\alpha-\\varphi)} g$\n",
+    "16. $g_y = \\beta / {(1-\\alpha-\\varphi)} g - {(\\kappa+\\epsilon)n} / {(1-\\alpha-\\varphi)} - \\epsilon / {(1-\\alpha-\\varphi)} s_E$\n",
+    "\n",
+    "we now use that the solow model with human capital and natural resources exhibit constant return to scale, which gives us\n",
+    "\n",
+    "17. $g_y = \\beta / {(\\beta+\\kappa+\\epsilon)} g - {(\\kappa+\\epsilon)n} / {(\\beta+\\kappa+\\epsilon)} - \\epsilon / {(\\beta+\\kappa+\\epsilon)} s_E$\n",
+    "\n",
+    "We now have our equation 17, which can tell us how large growth rate in GDP each country have depending on the parameters. Therefore, we will first find the parameter values before we continue by finding the growth rate for GDP for different values for growth rate for population and growth rate for technology \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Step 4: finding parameter values for all parameters that are included in our equation 17:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use equation (37) from page 205 in the book \"Introducing  Advanced Macroeconomics - Growth and Business Cycles\" by Peter Birk Sørensen and Hans Jørgen Whitta-Jacobsen and augmenting it with human capital. We then get:\n",
+    "\n",
+    "18. $ln(y_t^*) = \\beta / {(\\beta+\\kappa+\\epsilon)} ln(A_t) + \\epsilon / {(\\beta+\\kappa+\\epsilon)} ln(s_E) + \\alpha / {(\\beta+\\kappa+\\epsilon)} [ln(s_K)-ln(n+0.062)]+ \\varphi / {(\\beta+\\kappa+\\epsilon)} [ln(s_H)-ln(n+0.062)] + \\kappa / {(\\beta+\\kappa+\\epsilon)} ln({X/L_t})+ \\epsilon / {(\\beta+\\kappa+\\epsilon)} ln({R_t/L_t}) $\n",
+    "\n",
+    "Which gives us the following regression equation:\n",
+    "\n",
+    "18. $ln(y_{00}^i) = \\gamma_0 + \\gamma_1 [ln(s^i_K)-ln(n^i+0.062)]+ \\gamma_2 [ln(s^i_H)-ln(n^i+0.062)] + \\gamma_3 ln({X/L^i})_{00}+  \\gamma_4 ln({R^i/L^i})_{00} $\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 logy03   R-squared:                       0.894\n",
+      "Model:                            OLS   Adj. R-squared:                  0.889\n",
+      "Method:                 Least Squares   F-statistic:                     164.6\n",
+      "Date:                Tue, 07 May 2019   Prob (F-statistic):           3.40e-37\n",
+      "Time:                        18:56:41   Log-Likelihood:                -40.409\n",
+      "No. Observations:                  83   AIC:                             90.82\n",
+      "Df Residuals:                      78   BIC:                             102.9\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept     -3.4993      1.159     -3.021      0.003      -5.806      -1.193\n",
+      "logy60         0.6496      0.070      9.279      0.000       0.510       0.789\n",
+      "logsK          0.3660      0.114      3.214      0.002       0.139       0.593\n",
+      "logsH          0.3084      0.104      2.961      0.004       0.101       0.516\n",
+      "logn_1        -1.8070      0.454     -3.980      0.000      -2.711      -0.903\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.051   Durbin-Watson:                   1.945\n",
+      "Prob(Omnibus):                  0.591   Jarque-Bera (JB):                0.561\n",
+      "Skew:                          -0.157   Prob(JB):                        0.756\n",
+      "Kurtosis:                       3.251   Cond. No.                         136.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "logy60=np.log(DataDescribe[\"y60\"])\n",
+    "logy03=np.log(DataDescribe[\"y03\"])\n",
+    "logsK=np.log(DataDescribe[\"sK\"])\n",
+    "logsH=np.log(DataDescribe[\"sH\"])\n",
+    "logn_1 =np.log(DataDescribe[\"n\"]+0.062)\n",
+    "\n",
+    "\n",
+    "# Fit regression model (using the natural log of one of the regressors)\n",
+    "results = smf.ols(\"logy03 ~ logy60 + logsK + logsH + logn_1\", data=DataDescribe).fit()\n",
+    "\n",
+    "# Inspect the results\n",
+    "print(results.summary())"
+   ]
   },
   {
    "cell_type": "code",
