--- a/modelproject/Modelproject.ipynb
+++ b/modelproject/Modelproject.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Mandatory assignment 2: Solow growth model with human capital\n",
-    "Vision: Prgramming is more than writing code. The ultimate goal of the projects in this course is that you learn to formulate a programming problem of your own choice and find your own way to solve it and present the results.\n",
+    "Vision: Programming is more than writing code. The ultimate goal of the projects in this course is that you learn to formulate a programming problem of your own choice and find your own way to solve it and present the results.\n",
     "\n",
     "* **Step 1: Package import:** The first part of the code in our project is the use of libraries with essential packages of panda, numpy and glob which is essential for data structuring and especially arrays and pathnames. On top of that, we import statsmodel XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX We import the scipy package that provides various commonly used optimization algorithms. The sympy package is a Python library for symbolic computation. XXXXXXXXXXXXXXXXXXXXXXXXXX"
    ]
